# pyparlaclarin

./: .gitignore  CITATION.cff  README.md  docs.fish  pyproject.toml
.github/workflows/: prerelease.yml
docs/: index.html  pyparlaclarin.html  search.js
docs/pyparlaclarin/: create.html  export.html  index.html  read.html  refine.html  utils.html
pyparlaclarin/: __init__.py  create.py  export.py  read.py  refine.py
