[tool.poetry]
name = "pyparlaclarin"
version = "0.6.2"
description = "Read, create, and modify Parla-Clarin XML files"
authors = ["ninpnin <vainoyrjanainen@icloud.com>"]
repository = "https://github.com/welfare-state-analytics/pyparlaclarin"
documentation = "https://welfare-state-analytics.github.io/pyparlaclarin/pyparlaclarin/"
readme = "README.md"
license = "MIT"
packages = [
    { include = "pyparlaclarin", from = "" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
devtools = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"